syntax = "proto3";

package users;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";

option go_package = "github.com/xdevspo/go-tmpl-microservice/auth/pkg/users;users";

message UserInfo {
  string username = 1 [(validate.rules).string = {min_len: 3, max_len: 32}];
  string password_hash = 2 [(validate.rules).string.max_len = 60];
  string email = 3 [(validate.rules).string.email = true];
}

message User {
  int64 id = 1;
  UserInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

service Users {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
  }
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Update(UpdateRequest) returns (google.protobuf.Empty) {}
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}

message CreateRequest {
  UserInfo user = 1 [(validate.rules).message.required = true];
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1 [(validate.rules).int64.gt = 0];
}

message GetResponse {
  User user = 1;
}

message UpdateRequest {
  int64 id = 1 [(validate.rules).int64.gt = 0];
  UserInfo userInfo = 2 [(validate.rules).message.required = true];
}

message DeleteRequest {
  int64 id = 1;
}